--- a/style.scss
+++ b/style.scss
@@ -47,7 +47,7 @@
     
 
     &__image{
-        background-image: url('images/asian.jpg');
+        background-image: url('/images/asian.jpg');
         background-position: left center;
         background-size: contain;  //////// this will keep the image responsive and not let part of the image get cut off when adjusting the screen sizes
         background-repeat: no-repeat;
