--- a/style.scss
+++ b/style.scss
@@ -48,12 +48,11 @@
 
     &__image{
         background-image: url('./images/asian.jpg');
-        background-position: left center;
         background-size: contain;  //////// this will keep the image responsive and not let part of the image get cut off when adjusting the screen sizes
         background-repeat: no-repeat;
+        border-radius: 12px;
         width: 50%;
-        border-radius: 10px;
-        
+        background-position: left center;
     }
     &__text{
         width: 50%;
@@ -92,6 +91,7 @@
 .footer__instagram img{
     width: 5.3vw;
 }
+ 
 
 .footer__twitter img{
     width: 5.3vw;
@@ -105,6 +105,14 @@
     width: 5.3vw;
 }
 
+.github {
+    border-radius: 50%;
+}
+
+.github:hover{
+    background-color: blue;
+}
+
 @media (max-width: 650px){
     .header{
 
@@ -112,6 +120,7 @@
 
         &__logo{
             font-size: 40px;
+            margin-top: 15px;
         }
 
         &__menu{
@@ -125,10 +134,13 @@
         align-items: center;
 
         &__image{
-            width: 300px;
-            height: 200px;
+            height: 250px;
+            width: 250px;
             border-radius: 100%;
             background-size: 100%;
+            border: 2px solid black;
+            background-size: cover;
+            background-position: center;
         }
 
         &__text{
