--- a/style.scss
+++ b/style.scss
@@ -133,6 +133,7 @@
     .main{
         flex-direction: column;
         align-items: center;
+        height:50%;
 
         &__image{
             height: 250px;
