--- a/style.scss
+++ b/style.scss
@@ -133,7 +133,8 @@
     .main{
         flex-direction: column;
         align-items: center;
-        height:50%;
+        justify-content: space-around;
+        height: 60%;
 
         &__image{
             height: 250px;
