--- a/style.css
+++ b/style.css
@@ -117,8 +117,9 @@
   }
   .main {
     flex-direction: column;
-    align-items: center;
-    height:50%;
+        align-items: center;
+        justify-content: space-around;
+        height: 60%;
   }
   .main__image {
     height: 250px;
